Update to Minecraft 1.20.6